fixed Search on mobile + URL fixes

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -74,3 +74,9 @@ img[src*='#center'] {
 .image-scaled {
   transform: scale(0.80);
 }
+
+@media (max-width: 996px) {
+  .navbar .navbar__brand {
+    display: none;
+  }
+}
